i18n: Adjust wording for Growth features notifications
Bug: T331076
Change-Id: I74be2a687eb009bc047e7be6613e68e5a1b26133

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -569,6 +569,6 @@
 	"growthexperiments-levelingup-keepgoing-notification-header": "Keep making suggested edits to develop {{GENDER:$2|your}} editing skills",
 	"growthexperiments-levelingup-keepgoing-notification-body": "{{GENDER:$2|You’ve}} made $3 {{PLURAL:$3|suggested edit|suggested edits}}. Keep going to learn more new skills.",
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Make a suggested edit",
-	"echo-category-title-ge-newcomer": "New editor engagement",
-	"echo-pref-tooltip-ge-newcomer": "Notify me about newcomer tasks and other Growth team features designed to improve new editor retention."
+	"echo-category-title-ge-newcomer": "Growth features",
+	"echo-pref-tooltip-ge-newcomer": "Notify me about tasks for newcomers and other features designed to help new users."
 }
