Post edit panel: do not wait for tasks request to show the panel
The post edit panel setup was deferred to the completion of
the growthtasks api request. This patch changes the behavior
to show the panel in a loading state while the request is not
complete.

The panel is initialised in a loading state and subscribes to
the NewcomerTaskStore events to update the panel main area
when the data arrives or an error occurs.

Bug: T294835
Change-Id: I727e2d356a573b20071acd816a8a0709022bc268

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -193,6 +193,7 @@
 	"growthexperiments-homepage-discovery-mobile-nonhomepage-banner-text": "Open the side menu and tap $2 to visit {{GENDER:$1|your}} homepage.",
 	"growthexperiments-homepage-suggestededits-pager": "<strong>$1</strong> of <strong>$2</strong> {{PLURAL:$2|suggestion|suggestions}}",
 	"growthexperiments-homepage-suggestededits-pager-end": "End",
+	"growthexperiments-homepage-suggestededits-pager-loading": "Loading…",
 	"growthexperiments-homepage-suggestededits-pageviews": "$1 visits (past 60 days)",
 	"growthexperiments-homepage-suggestededits-previous-card": "Previous suggested edit",
 	"growthexperiments-homepage-suggestededits-next-card": "Next suggested edit",
