Personalized praise: Add notifications
Notifications are handled from two different places within
PersonalizedPraiseNotificationsDispatcher:

    (1) maybeNotifyAboutPendingMentees: handles delayed notifications (ie. cases,
        when the mentor wishes to be notified only every N hours, not every time
        a new praiseworthy mentee is suggested).
    (2) onMenteeSuggested: handles immediate notifications (fired directly after
        a new mentee is added into the mentor dashboard).

PersonalizedPraiseNotificationsDispatcher::maybeNotifyAboutPendingMentees
is called every three hours via maintenance/refreshPraiseworthyMentees.php

Bug: T322452
Change-Id: If9ff71dc7ad710bcbd31964bda00fb07e167878e

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -105,6 +105,9 @@
 	"growthexperiments-notification-header-mentee-claimed": "Header of the notification sent to old mentor after one of their mentees was claimed.\n\nParameters:\n* $1 - old mentor's username\n* $2 - old mentor's raw username, for use in GENDER\n* $3 - mentee's username",
 	"growthexperiments-notification-body-mentee-claimed": "Body of the notification sent to old mentor after one of their mentees was claimed.\n\nParameters:\n* $1: reason of the change",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "Label of the secondary link in the notification sent to old mentor after one of their mentees was claimed.",
+	"growthexperiments-notification-header-new-praiseworthy-mentees": "Header of the notification sent to mentors when they have new praiseworthy mentees to review in their dashboard.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-notification-body-new-praiseworthy-mentees": "Body of the notification sent to mentors when they have new praiseworthy mentees to review in their dashboard.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-notification-secondary-link-new-praiseworthy-mentees": "Label of the secondary link in the notification sent to mentors when they have new praiseworthy mentees to review in their dashboard.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Subheader in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-low": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
