--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -99,6 +99,9 @@
 	"growthexperiments-notification-header-mentee-claimed": "Your {{GENDER:$3|mentee}}, $3, was {{GENDER:$2|claimed}} by $1.",
 	"growthexperiments-notification-body-mentee-claimed": "Reason: $1",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "What is \"Claim mentee\"?",
+	"growthexperiments-notification-header-new-praiseworthy-mentees": "Send encouragement to mentees via your Mentor dashboard",
+	"growthexperiments-notification-body-new-praiseworthy-mentees": "Mentees have been displayed on your dashboard for appreciation.",
+	"growthexperiments-notification-secondary-link-new-praiseworthy-mentees": "View mentor dashboard",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Number of mentees assigned to me",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "None (I claim them manually)",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-low": "About half the average",
