Personalized praise: Add server-side instrumentation
Bug: T325117
Depends-On: I88972036c690bdbb4845283a75048016375b473d
Change-Id: I6fd704e2685ea47d170b15622418cf76d1f2dafd

--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -28,5 +28,6 @@
 	"apihelp-growthmanagementorlist-param-username": "Username of the mentor affected by the change. If not provided, currently logged in user will be used. Can be only used by privileged users.",
 	"growthexperiments-api-managementors-error-no-away-timestamp": "If isaway is true, then awaytimestamp must be provided.",
 	"apihelp-growthinvalidatepersonalizedpraisesuggestion-summary": "Invalidates a suggestion of a praiseworthy mentee in the Personalized praise module on the Mentor dashboard",
-	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-mentee": "Mentee to invalidate"
+	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-mentee": "Mentee to invalidate",
+	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-reason": "Reason to invalidate the suggestion"
 }
